[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/CustomDifficulty/CustomDifficultyConfig.gd" type="Script" id=1]
[ext_resource path="res://src/UI/CustomDifficulty/TimeLimit.gd" type="Script" id=2]
[ext_resource path="res://src/UI/CustomDifficulty/QueueSize.gd" type="Script" id=3]

[node name="CustomDifficultyConfig" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 72.0
margin_top = 32.0
margin_right = -72.0
margin_bottom = -32.0
window_title = "Custom Difficulty"
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 20

[node name="TimeLimit" type="GridContainer" parent="VBox"]
margin_right = 848.0
margin_bottom = 31.0
rect_min_size = Vector2( 300, 0 )
custom_constants/hseparation = 10
columns = 3
script = ExtResource( 2 )

[node name="CheckBox" type="CheckBox" parent="VBox/TimeLimit"]
margin_right = 123.0
margin_bottom = 31.0
text = "Time Limit:"

[node name="LineEdit" type="LineEdit" parent="VBox/TimeLimit"]
margin_left = 133.0
margin_right = 490.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Unlimited"
editable = false
placeholder_text = "Seconds"

[node name="QueueSize" type="GridContainer" parent="VBox"]
margin_top = 51.0
margin_right = 848.0
margin_bottom = 82.0
rect_min_size = Vector2( 300, 0 )
custom_constants/hseparation = 10
columns = 3
script = ExtResource( 3 )

[node name="CheckBox" type="CheckBox" parent="VBox/QueueSize"]
margin_right = 127.0
margin_bottom = 31.0
size_flags_horizontal = 0
text = "Queue Size:"

[node name="SpinBox" type="SpinBox" parent="VBox/QueueSize"]
margin_left = 137.0
margin_right = 492.0
margin_bottom = 31.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 9.22337e+18
value = 10.0
editable = false
suffix = "Blocks"

[node name="Speed" type="GridContainer" parent="VBox"]
margin_top = 102.0
margin_right = 527.0
margin_bottom = 133.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 0
custom_constants/hseparation = 10
columns = 3

[node name="Label" type="Label" parent="VBox/Speed"]
margin_top = 5.0
margin_right = 56.0
margin_bottom = 26.0
size_flags_horizontal = 0
text = "Speed:"

[node name="SpinBox" type="SpinBox" parent="VBox/Speed"]
margin_left = 66.0
margin_right = 152.0
margin_bottom = 31.0
size_flags_horizontal = 3
min_value = 1.0
value = 7.0

[node name="Label2" type="Label" parent="VBox/Speed"]
margin_left = 162.0
margin_top = 5.0
margin_right = 527.0
margin_bottom = 26.0
size_flags_horizontal = 0
text = "(A new block will spawn every {x} seconds)"

[node name="BoardSize" type="GridContainer" parent="VBox"]
margin_top = 153.0
margin_right = 300.0
margin_bottom = 225.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 0
custom_constants/hseparation = 10
columns = 2

[node name="Label" type="Label" parent="VBox/BoardSize"]
margin_top = 25.0
margin_right = 93.0
margin_bottom = 46.0
size_flags_horizontal = 0
text = "Board Size:"

[node name="VBox" type="VBoxContainer" parent="VBox/BoardSize"]
margin_left = 103.0
margin_right = 173.0
margin_bottom = 72.0
custom_constants/separation = 10

[node name="LineEdit" type="LineEdit" parent="VBox/BoardSize/VBox"]
margin_right = 70.0
margin_bottom = 31.0
placeholder_text = "X"

[node name="LineEdit2" type="LineEdit" parent="VBox/BoardSize/VBox"]
margin_top = 41.0
margin_right = 70.0
margin_bottom = 72.0
placeholder_text = "Y"

[node name="Override" type="GridContainer" parent="VBox"]
margin_top = 245.0
margin_right = 300.0
margin_bottom = 274.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 0
custom_constants/hseparation = 10
columns = 2

[node name="CheckBox" type="CheckBox" parent="VBox/Override"]
margin_right = 171.0
margin_bottom = 29.0
size_flags_horizontal = 0
text = "Allow Overriding"

[node name="GameOver" type="GridContainer" parent="VBox"]
margin_top = 294.0
margin_right = 300.0
margin_bottom = 356.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 0
custom_constants/hseparation = 10
columns = 2

[node name="Label" type="Label" parent="VBox/GameOver"]
margin_top = 20.0
margin_right = 147.0
margin_bottom = 41.0
size_flags_horizontal = 0
text = "Game over when:"

[node name="VBox" type="VBoxContainer" parent="VBox/GameOver"]
margin_left = 157.0
margin_right = 292.0
margin_bottom = 62.0

[node name="QueueFull" type="CheckBox" parent="VBox/GameOver/VBox"]
margin_right = 135.0
margin_bottom = 29.0
text = "Queue is full"

[node name="QueueFull2" type="CheckBox" parent="VBox/GameOver/VBox"]
margin_top = 33.0
margin_right = 135.0
margin_bottom = 62.0
text = "Board is full"

[connection signal="pressed" from="VBox/TimeLimit/CheckBox" to="VBox/TimeLimit" method="_on_CheckBox_pressed"]
